# azure-product-bot-kb-updater

./: .funcignore  .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt  test-tmp.py
.github/workflows/: codeql-analysis.yml  deploy-function.yml  main_azure-product-bot-kb-updater.yml  unit-test.yml
azure_product_bot_kb_updater/: __init__.py  function.json
com/: QnA_brute_force.py
tests/: test_QnA_brute_force.py  tests.json
